# AutoDiff

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakeLists.txt.bk  LICENSE  README.md
AutoDiff/: CMakeLists.txt  benchmark.h  computational_graph.h  control_flow.h  custom_function.h  differentiation_rules.h  dual_number.h  elementary_functions.h  expression.h  forward_mode.h  optimizer.h  reverse_mode.h  validation.h
benchmarks/: CMakeLists.txt  benchmark_differentiation_modes.cpp  benchmark_dual_numbers.cpp  benchmark_elementary.cpp  benchmark_expression_trees.cpp  benchmark_forward_vs_backward_crossover.cpp  benchmark_memory.cpp  benchmark_rules.cpp
examples/: main.cpp  parameters.cpp  topology.cpp  uff.cpp  uff.hpp  uff_parameters.h  uff_simulator.h  xyz_parser.cpp  xyz_parser.h
test/: CMakeLists.txt  test_basic.cpp  test_composite.cpp  test_computational_graph.cpp  test_control_flow.cpp  test_custom_functions.cpp  test_edge_cases.cpp  test_elementary_functions.cpp  test_forward_mode.cpp  test_functions.cpp  test_hyperbolic.cpp  test_multivariable.cpp  test_operations.cpp  test_optimizer.cpp  test_reverse_mode.cpp  test_rules.cpp  test_validation.cpp
